user can search posts

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -189,3 +189,11 @@ button.form {
   float: left;
   margin-left: 10px;
 }
+
+.form input.ng-invalid.ng-touched {
+   background-color: #FA787E;
+ }
+
+ .form input.ng-valid.ng-touched {
+   background-color: #78FA89;
+ }
