--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,7 @@ html(ng-app='redditClone')
   head
     title Reddit Clone
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css")
     script(type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js")
     script(type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js")
     script(type="text/javascript" src="javascripts/redditClone.js")
