--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -205,7 +205,7 @@ input.submit {
  }
 
  span.postHeader {
-   width: 78%;
+   width: 80%;
    height: 20px;
  }
 
@@ -216,7 +216,9 @@ input.submit {
  .green {
    color: #78FA89;
  }
-
+.first {
+  margin-left: 0px;
+}
  .last {
    font-weight: bolder;
  }
