--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -124,6 +124,9 @@ header {
 
 .sortby {
   margin-left: 30px;
+  margin-right: 750px;
+  width: 100px;
+  float: right;
 }
 
 .drop {
@@ -191,11 +194,11 @@ input.submit {
   margin-left: 10px;
 }
 
-.form input.ng-invalid.ng-touched {
+.form input.ng-invalid {
    background-color: #FA787E;
  }
 
- .form input.ng-valid.ng-touched {
+ .form input.ng-valid {
    background-color: #78FA89;
  }
 
@@ -222,3 +225,55 @@ input.submit {
  .last {
    font-weight: bolder;
  }
+ .comments {
+   float: right;
+   width: 80%;
+ }
+
+ .commentAuthor {
+   font-weight: bolder;
+   float: left;
+ }
+
+.commentText {
+  float: left;
+}
+
+input.commentForm {
+  margin-left: 5px;
+  border-radius: 3px;
+  height: 20px;
+  font-weight: normal;
+}
+
+label.commentForm {
+  margin-left: 5px;
+  font-weight: bolder;
+}
+
+.addCommentForm {
+  width: 80%;
+  float: right;
+}
+
+.commentForm .last {
+  margin-right: 5px;
+}
+
+.dropdown-container {
+  border: 1px solid black;
+  width: 100px;
+  height: 40px;
+}
+
+.sortOption {
+  border: 1px solid #666666;
+  margin-left: 30px;
+  margin-right: 750px;
+  width: 100px;
+  float: right;
+  background-color: white;
+  height: 40px;
+  text-align: center;
+  line-height: 40px;
+}
