--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,9 +6,8 @@ html(ng-app='redditClone')
     link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css")
     script(type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js")
     script(type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js")
-    script(type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js")
-    script(type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js")
-    script(type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.4.0/animate.min.css") 
+    script(src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.3/moment.js")
+    script(src="//cdnjs.cloudflare.com/ajax/libs/angular-moment/0.8.2/angular-moment.js")
     script(type="text/javascript" src="javascripts/redditClone.js")
     
   body(ng-controller='RedditCloneController')
