--- a/views/index.jade
+++ b/views/index.jade
@@ -34,8 +34,8 @@ block content
         input.form(ng-model="post.description" id="description" placeholder="Description" required)
         p
         input.submit(type="submit" ng-disabled="newPost.$invalid" ng-click='submitForm()' value="Submit Post")
-    div(ng-repeat="post in posts | filter: search | orderBy: q")
-      div.post(ng-class='{smaller: !showingComments, larger: showingComments}')
+    div.postRepeat(ng-repeat="post in posts | filter: search | orderBy: q")
+      div.post(ng-class='{smaller: !showingComments, larger: showingComments}' ng-animate="{enter: 'animate-enter', leave: 'animate-leave'}")
         img.photo(ng-src="{{post.image}}")
         span(class="postHeader first")
           p(class="title postHeader first") {{post.title}}  
