--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,6 +8,7 @@ html(ng-app='redditClone')
     script(type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js")
     script(src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.3/moment.js")
     script(src="//cdnjs.cloudflare.com/ajax/libs/angular-moment/0.8.2/angular-moment.js")
+    script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-animate.js')
     script(type="text/javascript" src="javascripts/redditClone.js")
     
   body(ng-controller='RedditCloneController')
