--- a/views/index.jade
+++ b/views/index.jade
@@ -34,16 +34,16 @@ block content
         input.form(ng-model="post.description" id="description" placeholder="Description" required)
         p
         input.submit(type="submit" ng-disabled="newPost.$invalid" ng-click='submitForm()' value="Submit Post")
-    div.postRepeat(ng-repeat="post in posts | filter: search | orderBy: q")
+    div.postRepeat(ng-repeat="post in posts | filter: search | orderBy: -q")
       div.post(ng-class='{smaller: !showingComments, larger: showingComments}' ng-animate="{enter: 'animate-enter', leave: 'animate-leave'}")
         img.photo(ng-src="{{post.image}}")
         span(class="postHeader first")
           p(class="title postHeader first") {{post.title}}  
           p.postHeader  |  
           p.postHeader 
-            a.upVote(ng-click="upVote()")
+            a.upVote(ng-click="upVote(post)")
               i(class="fa fa-arrow-up")
-            a.downVote 
+            a.downVote(ng-click="downVote(post)")
               i(class="fa fa-arrow-down")
           p(class="postHeader last"  ng-class="{red: post.votes < 0, green: post.votes > 0}") {{post.votes}}
         p.author By {{post.author}}
