--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,6 +9,7 @@ html(ng-app='redditClone')
     script(src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.3/moment.js")
     script(src="//cdnjs.cloudflare.com/ajax/libs/angular-moment/0.8.2/angular-moment.js")
     script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-animate.js')
+    link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.4.0/animate.min.css")
     script(type="text/javascript" src="javascripts/redditClone.js")
     
   body(ng-controller='RedditCloneController')
