--- a/views/index.jade
+++ b/views/index.jade
@@ -2,13 +2,13 @@ extends layout
 
 block content
   header
-    span.logo Reddit Clone
+    span.logo CO Adventures
     a.submitPost(ng-click="showForm()")
       span.plus + 
       span.submit Submit Post
     input.search(type="text" placeholder="Search" ng-model="search")
     a(ng-click='showSort()')
-      div.sortby(for="sortby") Sort By {{q}} 
+      div.sortby(for="sortby") Sort By {{w}} 
         i(class="fa fa-sort-desc")
     div.sortContainer(ng-show='showingSortOptions')
       div.sortOption(ng-click="sortByVotes()") Votes
@@ -34,7 +34,7 @@ block content
         input.form(ng-model="post.description" id="description" placeholder="Description" required)
         p
         input.submit(type="submit" ng-disabled="newPost.$invalid" ng-click='submitForm()' value="Submit Post")
-    div.postRepeat(ng-repeat="post in posts | filter: search | orderBy: -q")
+    div.postRepeat(ng-repeat="post in posts | filter: search | orderBy: q")
       div.post(ng-class='{smaller: !showingComments, larger: showingComments}' ng-animate="{enter: 'animate-enter', leave: 'animate-leave'}")
         img.photo(ng-src="{{post.image}}")
         span(class="postHeader first")
@@ -42,7 +42,7 @@ block content
           p.postHeader  |  
           p.postHeader 
             a.upVote(ng-click="upVote(post)")
-              i(class="fa fa-arrow-up")
+              i(class="fa fa-arrow-up") &nbsp;&nbsp;
             a.downVote(ng-click="downVote(post)")
               i(class="fa fa-arrow-down")
           p(class="postHeader last"  ng-class="{red: post.votes < 0, green: post.votes > 0}") {{post.votes}}
@@ -70,9 +70,9 @@ block content
         div.addCommentForm(ng-show="showingAddComment")
           form.commentForm(novalidate name="newComment")
             label.commentForm(for='commentAuthor') Author: 
-            input.commentForm(id="commentAuthor" name="comment.author" placeholder="Username")
+            input.commentForm(id="commentAuthor" ng-model="comment.author" placeholder="Username")
             label.commentForm(for='commentAuthor') Text: 
-            input(class="commentForm last" id="commentAuthor" name="comment.text" placeholder="Comment Text")
-            input.submit(type="submit" ng-click='submitComment()' value="Submit")
+            input(class="commentForm last" id="commentAuthor" ng-model="comment.text" placeholder="Comment Text")
+            input.submit(type="submit" ng-click='submitComment(post)' value="Submit")
             
   footer
